perf: 升级JDK 17 #3836
1.startup-controller启动命令适配JDK17。